# python-virtual-environments

./: .gitignore  README.md
conda/: README.md  environment.yml  requirements.txt
hatch/: README.md
hatch/hatch-example/: LICENSE.txt  README.md  pyproject.toml
hatch/hatch-example/src/hatch_example/: __about__.py  __init__.py
mamba/: README.md  environment.yml
nox/: README.md  noxfile.py
pdm/: README.md  pyproject.toml
pew/: README.md
pipenv/: Pipfile  README.md
pixi/: README.md
pixi/pixi-demo-project/: pyproject.toml
poetry/: README.md  pyproject.toml
pyenv+virtualenv/: README.md
pyenv-virtualenv/: README.md
rye/: README.md  pyproject.toml
rye/src/rye/: __init__.py
tox/: README.md  tox.ini
uv/: README.md
virtualenv/: README.md
virtualenv+virtualenwrapper/: README.md
virtualenwrapper/: README.md
