[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["jgu103 <x@x.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
