[project]
name = "rye"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "jgujerry", email = "jianligu3@gmail.com" }
]
dependencies = [
    "requests>=2.31.0",
    "flask>=3.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "rye:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rye"]
