[project]
authors = [{name = "jgujerry", email = "xxx@xxx"}]
dependencies = []
description = "Add a short description here"
name = "pixi-demo-project"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pixi_demo_project = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
requests = ">=2.32.3,<3"
python = ">=3.11.0,<3.14"

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.py311.dependencies]
python = "==3.11"

[tool.pixi.environments]
test = ["test"]
py311 = ["py311"]
